<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <include
        layout="@layout/app_bar_layout"
        android:id="@+id/activity_main_app_bar_layout"/>

    <Button
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:id="@+id/class_search"
        android:layout_below="@+id/activity_main_app_bar_layout"
        android:layout_marginTop="20dp"
        android:layout_centerHorizontal="true"
        android:text="@string/class_search" />

    <Button
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:id="@+id/department_search"
        android:layout_below="@+id/class_search"
        android:layout_marginTop="20dp"
        android:layout_centerHorizontal="true"
        android:text="@string/department_search"/>

    <Button
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:id="@+id/faculty_search"
        android:layout_below="@+id/department_search"
        android:layout_marginTop="20dp"
        android:layout_centerInParent="true"
        android:text="@string/faculty_search"/>

    <Button
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:id="@+id/library"
        android:layout_below="@+id/faculty_search"
        android:layout_marginTop="20dp"
        android:layout_centerHorizontal="true"
        android:text="@string/library"/>

    <Button
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:id="@+id/lab_class_room"
        android:layout_below="@+id/library"
        android:layout_marginTop="20dp"
        android:layout_centerInParent="true"
        android:text="@string/lab_class_room"/>

    <Button
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:id="@+id/other_search"
        android:layout_below="@+id/lab_class_room"
        android:layout_marginTop="20dp"
        android:layout_centerInParent="true"
        android:text="@string/other_search"/>

</RelativeLayout>